--- a/Back End/Ingressa/src/main/resources/application.properties
+++ b/Back End/Ingressa/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://localhost/db_ingressa?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
 #spring.datasource.username=root
-#spring.datasource.password=6969
+#spring.datasource.password=root
 #spring.jpa.show-sql=true
 #spring.jackson.time-zone=Brazil/East
 
