--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost/db_ingressa?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.show-sql=true
-spring.jackson.time-zone=Brazil/East
-
-#spring.datasource.url=${JDBC_DATABASE_URL}
-#spring.datasource.username=${JDBC_DATABASE_USERNAME}
-#spring.datasource.password=${JDBC_DATABASE_PASSWORD}
-#spring.jpa.show-sql=true
-#spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost/db_ingressa?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.jpa.show-sql=true
+#spring.jackson.time-zone=Brazil/East
+
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
